--- a/package.json
+++ b/package.json
@@ -2,22 +2,22 @@
   "description": "Grunt tasks for vue, etc.",
   "private": true,
   "devDependencies": {
-    "grunt": "~1.0.0",
+    "grunt": "~1.0.4",
     "grunt-autoprefixer": "^3.0.3",
-    "grunt-contrib-csslint": "^0.5.0",
-    "grunt-contrib-jshint": "^0.12.0",
-    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-csslint": "^2.0.0",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-cssbeautifier": "^0.1.9",
-    "grunt-exec": "~0.4.2",
+    "grunt-exec": "~3.0.0",
     "grunt-load-gruntfile": "^0.0.2",
-    "grunt-sass": "^1.2.1"
+    "grunt-sass": "^3.0.2",
+    "@vue/cli-service": "^3.0.0-rc.10"
   },
   "dependencies": {
-    "@vue/cli-service": "^3.0.0-rc.10",
-    "node": "^8.11.3",
-    "node-sass": "^4.9.2",
-    "sass": "^1.10.3",
-    "vue": "^2.5.16",
-    "vue-template-compiler": "^2.5.16"
+    "node": "^12.4.0",
+    "node-sass": "^4.12.0",
+    "sass": "^1.21.0",
+    "vue": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
   }
 }
