--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "description": "Grunt tasks for vue, etc.",
+  "description": "Grunt tasks for sass.",
   "private": true,
   "devDependencies": {
-    "grunt": "~1.0.4",
-    "grunt-autoprefixer": "^3.0.3",
-    "grunt-contrib-csslint": "^2.0.0",
+    "core-js": "^3.1.4",
+    "grunt": "^1.0.4",
+    "grunt-autoprefixer": "^3.0.4",
     "grunt-contrib-jshint": "^2.1.0",
     "grunt-contrib-watch": "^1.1.0",
-    "grunt-cssbeautifier": "^0.1.9",
-    "grunt-exec": "~3.0.0",
-    "grunt-load-gruntfile": "^0.0.2",
+    "grunt-exec": "^3.0.0",
+    "grunt-load-gruntfile": "0.0.2",
     "grunt-sass": "^3.0.2",
-    "@vue/cli-service": "^3.0.0-rc.10"
-  },
-  "dependencies": {
-    "node": "^12.4.0",
-    "node-sass": "^4.12.0",
-    "sass": "^1.21.0",
+    "grunt-sass-lint": "^0.2.4",
     "vue": "^2.6.10",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "dependencies": {
+    "@vue/cli-service": "^3.9.2",
+    "node": "^12.6.0",
+    "node-sass": "^4.12.0",
+    "sass": "^1.22.5",
+    "vue-contenteditable-directive": "^1.2.0",
+    "vue-wysiwyg": "^1.7.2"
+  },
+  "browserslist": [
+    "defaults"
+  ]
 }
