--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,20 @@
+notifications:
+  email: false
+
 language: php
+
+os: linux
+
+dist: xenial
 
 sudo: false
 
+services:
+  - mysql
+
 addons:
   firefox: "47.0.1"
-  postgresql: "9.3"
+  postgresql: "9.6"
   apt:
     packages:
       - oracle-java8-installer
@@ -13,17 +23,16 @@ addons:
 
 cache:
   directories:
-    - $HOME/.composer/
+    - $HOME/.composer/cache
     - $HOME/.npm
 
 php:
- - 7.1
- - 5.6
+ - 7.2
 
 env:
  global:
   - IGNORE_PATHS=node_modules
-  - MOODLE_BRANCH=MOODLE_33_STABLE
+  - MOODLE_BRANCH=MOODLE_38_STABLE
  matrix:
   - DB=pgsql
   - DB=mysqli
@@ -39,14 +48,14 @@ before_install:
   - nvm install 8.9
   - nvm use 8.9
   - cd ../..
-  - composer create-project -n --no-dev --prefer-dist blackboard-open-source/moodle-plugin-ci ci ^2
+  - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
 
 install:
-  - moodle-plugin-ci add-plugin -b ${MOODLE_BRANCH}  blackboard-open-source/moodle-filter_ally
-  - moodle-plugin-ci add-plugin -b ${MOODLE_BRANCH}  blackboard-open-source/moodle-report_allylti
+  - moodle-plugin-ci add-plugin -b ${MOODLE_BRANCH}  open-lms-open-source/moodle-filter_ally
+  - moodle-plugin-ci add-plugin -b ${MOODLE_BRANCH}  open-lms-open-source/moodle-report_allylti
   - moodle-plugin-ci add-plugin -b master  jmvedrine/moodle-qtype_ddmatch
-  - moodle-plugin-ci add-plugin -b ${MOODLE_BRANCH}  blackboard-open-source/moodle-mod_hsuforum
+  - moodle-plugin-ci add-plugin -b ${MOODLE_BRANCH}  open-lms-open-source/moodle-mod_hsuforum
   - moodle-plugin-ci install
 
 script:
